--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       font-family: 'Poppins', sans-serif;
     }
   </style>
-  <title>React App</title>
+  <title>Portfolio Website</title>
 </head>
 
 <body>
